--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-progress": "^1.0.3",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.321.0",
     "next": "14.1.0",
     "node": "^21.6.1",
