--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-progress": "^1.0.3",
     "axios": "^1.6.7",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "emailjs-com": "^3.2.0",
